# DIO-Cognizant-Cloud-Data-Engineer

./: .gitignore  .py  linux_cmd.md  permutation.py  pyproject.toml  readme.md
project/p1_sql/: .gitignore  DDL.txt  readme.md
project/p1_sql/PHP/: conecta.inc.php  menu.php  style.css
project/p1_sql/PHP/Change/: CChangeIngrediente.php  CChangeReceita.php  ChangeIngrediente.php  ChangeReceita.php
project/p1_sql/PHP/Delete/: CDeleteChange.php  CDeleteIngrediente.php  CDeleteReceita.php  CDeleteShoppingList.php  DeleteChange.php  DeleteIngrediente.php  DeleteReceita.php  DeleteShoppingList.php
project/p1_sql/PHP/Form/: FormIngrediente.php  FormReceita.php  FormShoppingList.php
project/p1_sql/PHP/Insert/: InserirIngrediente.php  InserirReceita.php
project/p1_sql/PHP/Main/: Index.php
project/p1_sql/PHP/Model/: ClassIngrediente.php  ClassReceita.php
project/p1_sql/PHP/Report/: ReportIngrediente.php  ReportReceita.php  ReportShoppingList.php
project/p1_sql/appcook/: pom.xml
project/p1_sql/appcook/src/main/java/dao/: IngredienteDAO.java
project/p1_sql/appcook/src/main/java/model/: Ingrediente.java
project/p1_sql/appcook/src/main/java/view/: TelaInicial.form  (+5 more)
project/p2_package/: ReadMe.md  main.py  pyproject.toml  setup.py
project/p2_package/huffman_sch.egg-info/: PKG-INFO  SOURCES.txt
project/p2_package/src/: create_huffman_algorithm.py  create_report.py  process_list.py
project/p2_package/src/function/: add_tree_into_dict.py  create_binary_tree_huffman.py  create_pair.py  get_element_value.py
project/p2_package/test/: huffman_algorithm_test.py
