[tool.poetry]
name = "p2_package"
version = "0.1.0"
description = ""
authors = ["devscheffer <devscheffer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^62.1.0"
twine = "^4.0.0"
wheel = "^0.37.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
